Fix problem with uneven margin in the corportation section

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ div.logo > img {
     flex-basis: 0px;
     margin-top: 15vh;
     margin-bottom: 5vh;
-    margin-left: 2vw;
+    margin-left: 3rem;
     margin-right: 15vw;
 }
 
